# K-9ModernCppStarter

./: .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILD.bazel  README.md  WORKSPACE  inotify.BUILD  json.BUILD  osx
k9/: ThreadPool.h  threadpool.h
test/: inotify_test.cc  json_test.cc  spdlog_test.cc  threadpool_test.cc
