# Copyright 2018 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "k9-lib",
    # srcs = ["src/"],
    hdrs = ["k9/threadpool.h"],
    # includes = ["k9"],
    deps = [
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@json//:json-lib",
        # "@inotify//:inotify-lib", # This only works on Linux
    ]
)

cc_test(
    name = "k9-test",
    srcs = ["test/threadpool_test.cc", "test/json_test.cc"],
    deps = [
        ":k9-lib",
        "@com_google_googletest//:gtest_main",
    ]
)

cc_binary(
    name = "k9",
    srcs = ["src/main.cc"],
    deps = [
        ":k9-lib",
    ]
)
